Updated header for all templates

--- a/templates/cfp_form.html
+++ b/templates/cfp_form.html
@@ -18,12 +18,14 @@
   <section id="main-container" class="main-container">
 
     <div class="container">
+      <div class="row text-center">
+        <span class="icon-wrap"><i class="fa fa-microphone"></i></span>
+        <h2 class="section-title">{{ _('Call for proposals') }}</h2>
+        <p class="section-sub-title">{{ _('The Call For Proposals is open!') }}</p>
+      </div><!--/ Title row end -->
 
       <div class="row">
         <div class="col-md-12">
-
-          <p class="lead"><strong>{{ _('The Call For Proposals is open!') }}</strong></p>
-
           <form action="https://docs.google.com/forms/d/e/1FAIpQLSdzKJ7FAYDfAYFZEeNrs2rQMYMM_FDFOcu1tgvIQO-kzLczuA/formResponse"
                 target="_self"
                 id="bootstrapForm"
