--- a/templates/coc.html
+++ b/templates/coc.html
@@ -11,6 +11,10 @@
 
   <section id="main-container" class="main-container">
     <div class="container">
+      <div class="row text-center">
+        <span class="icon-wrap"><i class="fa fa-heart-o"></i></span>
+        <h2 class="section-title">{{ _('Code of Conduct') }}</h2>
+      </div><!--/ Title row end -->
 
       <div class="row">
         <div class="col-md-12">
@@ -23,17 +27,17 @@
 
       <div class="row featurette">
         <div class="col-md-12">
-          <h2>{{ _('Open') }}</h2>
+          <h3>{{ _('Open') }}</h3>
           <p class="text-justify">
             {{ _('Members of the community are open to collaboration, whether it\'s on PEPs, patches, problems, or otherwise. We\'re receptive to constructive comments and criticism, as the experiences and skill sets of other members contribute to the whole of our efforts. We\'re accepting of all who wish to take part in our activities, fostering an environment where anyone can participate and everyone can make a difference.') }}
           </p>
 
-          <h2>{{ _('Considerate') }}</h2>
+          <h3>{{ _('Considerate') }}</h3>
           <p class="text-justify">
             {{ _('Members of the community are considerate of their peers -- other Python users. We\'re thoughtful when addressing the efforts of others, keeping in mind that often times the labor was completed simply for the good of the community. We\'re attentive in our communications, whether in person or online, and we\'re tactful when approaching differing views.') }}
           </p>
 
-          <h2>{{ _('Respectful') }}</h2>
+          <h3>{{ _('Respectful') }}</h3>
           <p class="text-justify">
             {{ _('Members of the community are respectful. We\'re respectful of others, their positions, their skills, their commitments, and their efforts. We\'re respectful of the volunteer efforts that permeate the Python community. We\'re respectful of the processes set forth in the community, and we work within them. When we disagree, we are courteous in raising our issues.') }}
           </p>
@@ -41,7 +45,7 @@
             {{ _('Overall, we\'re good to each other. We contribute to this community not because we have to, but because we want to. If we remember that, these guidelines will come naturally.') }}
           </p>
 
-          <h2>{{ _('Slovak Python Community') }}</h2>
+          <h3>{{ _('Slovak Python Community') }}</h3>
           <p class="text-justify">
             {{ _('PyCon SK and Python Meetup fully identify with the Code of Conduct of the Python community. We create an environment, which is open to everyone, independently of sex, sexual orientation, race, education or religion. All communication should be respectful and on professional level. We will be tolerant to each other.') }}
           </p>
