--- a/templates/edusummit.html
+++ b/templates/edusummit.html
@@ -13,12 +13,14 @@
   <section id="main-container" class="main-container">
 
     <div class="container">
+      <div class="row text-center">
+        <span class="icon-wrap"><i class="fa fa-graduation-cap"></i></span>
+        <h2 class="section-title">{{ _('EduSummit') }}</h2>
+        <p class="section-sub-title">{{ _('Where Teachers meet Programmers') }}</p>
+      </div><!--/ Title row end -->
 
       <div class="row">
         <div class="col-md-12">
-
-          <p class="lead">{{ _('Where Teachers meet Programmers') }}</p>
-
           <p>{{ _('EduSummit is a special section of the conference focused on teaching programming at primary and secondary schools. After two years of having an EduTrack at PyCon SK, consisting of a single day of talks for teachers, we are now organising a two day summit during which teachers will be introduced to innovative ways and methods of teaching programming, share their knowledge of useful tools and last but not least participate in numerous workshops given by experienced educators.
 ') }}</p>
 
