--- a/templates/index.html
+++ b/templates/index.html
@@ -203,6 +203,42 @@
       <div class="text-center">
         <h3>{{ _('News') }}</h3>
       </div>
+
+      <div class="row">
+        <div class="col-md-12 text-left">
+          <div class="card">
+            <h5 class="card-header">01.12.2018 - {{ _('PyCon SK 2019 website redesign.') }}
+            </h5>
+            <div class="card-body">
+              <p>
+                {{ _('We have launched new design of the conference website. How do you like it? Let us know on our social networks.') }}<br/>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12 text-left">
+          <div class="card">
+            <h5 class="card-header">23.11.2018 -
+              {{ _('PyCon SK 2019 Slack channel & Social media') }}
+            </h5>
+            <div class="card-body">
+              <p>
+                {{ _('Join us at our social media:') }}
+                <a href="https://www.facebook.com/pyconsk"><i class="fa fa-facebook"></i></a>
+                <a href="https://twitter.com/pyconsk"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.linkedin.com/company/spy-o--z-/"><i class="fa fa-linkedin"></i></a>
+                <a href="https://www.meetup.com/pyconsk/"><i class="fa fa-meetup"></i></a>
+                <a href="https://pyconsk.slack.com/"><i class="fa fa-slack"></i></a>
+                <a href="https://github.com/pyconsk/"><i class="fa fa-github"></i></a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="row">
         <div class="col-md-12 text-left">
           <div class="card">
