--- a/templates/privacy-policy.html
+++ b/templates/privacy-policy.html
@@ -12,10 +12,14 @@
   <section id="main-container" class="main-container">
 
     <div class="container">
+      <div class="row text-center">
+        <span class="icon-wrap"><i class="fa fa-lock"></i></span>
+        <h2 class="section-title">{{ _('Privacy Policy') }}</h2>
+        <p class="section-sub-title">{{ _('SPy o.z. Privacy and Security') }}</p>
+      </div><!--/ Title row end -->
 
       <div class="row featurette">
         <div class="col-md-12">
-          <h2 class="featurette-heading">{{ _('SPy o.z. Privacy and Security') }}</h2>
           <p class="text-justify">
             {{ _('SPy o.z. value and respect all individuals and organizations that utilize our services. We understand that you may be concerned about privacy issues that surround the use of the Internet.') }}
           </p>
@@ -39,7 +43,7 @@
 
       <div class="row featurette">
         <div class="col-md-12">
-          <h2>{{ _('How SPy o.z. Uses Information About You') }}</h2>
+          <h3>{{ _('How SPy o.z. Uses Information About You') }}</h3>
           <p class="text-justify">
             {{ _('When you register for an event, make donations or select a volunteer opportunity, we may specifically ask for information about you -- such as name, home or Internet address, and billing information -- in order to provide that service or information to you. This information will be used solely for the purposes of completing your registration, donation or locating the volunteer opportunity you are seeking.') }}
           </p>
@@ -51,7 +55,7 @@
 
       <div class="row featurette">
         <div class="col-md-12">
-          <h2>{{ _('SPy o.z. Security') }}</h2>
+          <h3>{{ _('SPy o.z. Security') }}</h3>
           <p class="text-justify">
             {{ _('SPy o.z. takes every precaution to protect our user\'s information. When users submit sensitive information via the Web site, your information is protected both online and offline.') }}
           </p>
@@ -63,7 +67,7 @@
 
       <div class="row featurette">
         <div class="col-md-12">
-          <h2>{{ _('Third party services that may obtain some information about you:') }}</h2>
+          <h3>{{ _('Third party services that may obtain some information about you:') }}</h3>
           <p class="text-justify">
             {{ _('<strong>Tito</strong>: Event management website, we use for event ticket registration. Read their privacy and policy: ') }}
             <a href="https://ti.to/privacy" target="_blank">https://ti.to/privacy</a>
@@ -85,7 +89,7 @@
 
       <div class="row featurette">
         <div class="col-md-12">
-          <h2>{{ _('Third party service that could be avoided:') }}</h2>
+          <h3>{{ _('Third party service that could be avoided:') }}</h3>
           <p class="text-justify">
             {{ _('<strong>Tito</strong>: Join us on events that do not require tickets, such as monthly Python meetups. Unfortunately for PyCon SK conference ticket is required for everyone, however, you can use a pseudonym as we won\'t ask for your ID if you have a valid ticket (without any discount, for discounted tickets, student ID or similar might be required).') }}
           </p>
