--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -10,19 +10,12 @@
   </div><!-- Page Banner end -->
 
   <section id="main-container" class="main-container">
-
     <div class="container">
-
-      <div class="row">
-        <div class="col-md-12">
-
-          <p class="text-justify">
-            {{ _('We\'ll get in touch as soon as possible.') }}
-          </p>
-
-        </div>
-      </div>
-
+      <div class="row text-center">
+        <span class="icon-wrap"><i class="fa fa-thumbs-up"></i></span>
+        <h2 class="section-title">{{ _('Thank you') }}</h2>
+        <p class="section-sub-title">{{ _('We\'ll get in touch as soon as possible.') }}</p>
+      </div><!--/ Title row end -->
     </div>
   </section>
 {% endblock %}
