--- a/templates/cfv.html
+++ b/templates/cfv.html
@@ -18,12 +18,14 @@
   <section id="main-container" class="main-container">
 
     <div class="container">
+      <div class="row text-center">
+        <span class="icon-wrap"><i class="fa fa-users"></i></span>
+        <h2 class="section-title">{{ _('Call for volunteers') }}</h2>
+        <p class="section-sub-title">{{ _('We need you to help organize PyCon SK 2019!') }}</p>
+      </div><!--/ Title row end -->
 
       <div class="row">
         <div class="col-md-12">
-
-          <p class="lead"><strong>{{ _('We need you to help organize PyCon SK 2019!') }}</strong></p>
-
           <p class="text-justify">
             {{ _('PyCon SK is organized by the Python community and for the Python community.') }}
             {{ _('All of our staff members are volunteers. We are looking for new members to join the team of organizers.') }}
