--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2142,6 +2142,11 @@ ul.navbar-nav > li.header-ticket:hover > a:after{
 	font-size: 12px;
 }
 
+.image-border {
+	border-color: #999;
+	border-style: solid;
+	border-width: 1px;
+}
 
 /* Pricing featured */
 
