fixed typos and updated translation

--- a/templates/index.html
+++ b/templates/index.html
@@ -110,7 +110,7 @@
               <div class="tab-pane active animated fadeInRight" id="tab_a">
                 <img class="about-tab-img pull-left" src="{{ url_for('static', filename='images/icon-image/tab-img1.png') }}" alt=""/>
                 <h3 class="tab-content-title">{{ _('Respected industry leaders with future-tech talks.') }}</h3>
-                <p>{{ _('Appart from well recognized community members we also invite first time speakers to submit a talk.') }}</p>
+                <p>{{ _('Apart from well recognized community members we also invite first time speakers to submit a talk.') }}</p>
                 <p>{{ _('If you\'ve done something that you think other people might be interested in, or that you think they should know about, please do consider telling us about it.') }}</p>
                 <p class="text-center">
                   <a href="{{ url_for('cfp', lang_code=lang_code) }}" class="btn btn-primary">{{ _('Submit your talk') }}
