--- a/templates/venue.html
+++ b/templates/venue.html
@@ -69,7 +69,7 @@
               </p>
               <p class="text-justify">
                 {{ _('From Bratislava airport you can take taxi (use the phone, it''s cheaper), or take the bus #61 and then move to bus #39 at the Bajkalska station. '
-                 'Get off the bus at the station ZOO and simply follow the PyCon stickers up to the hill to univerrsity campus.') }}
+                 'Get off the bus at the station ZOO and simply follow the PyCon stickers up to the hill to university campus.') }}
               </p>
               <p class="text-justify">
                 {{ _('If you travel via Vienna airport, there are direct and cheap bus connections from early morning till midnight. One way ticket costs about 8 EUR '
