--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <div class="banner-item">
       <div class="container">
         <div class="banner-content text-center">
-          <h1 class="banner-title">{{ _('<span>Be a part of </span>PyCon SK 2019.') }}</h1>
+          <h1 class="banner-title">{{ _('<span>Be a part of </span>PyCon SK 2019') }}</h1>
           <h2 class="banner-desc">
             <span class="first">{{ _('22-24 March') }}</span><span>Bratislava</span><span>2019</span></h2>
         </div>
@@ -72,7 +72,7 @@
             </p>
             <p>
               {{ _('PyCon SK is a diverse conference dedicated to providing an enjoyable experience to everyone. Help us do this by following our ') }}
-              <a href="{{ url_for('coc', lang_code=lang_code) }}">code of conduct.</a>
+              <a href="{{ url_for('coc', lang_code=lang_code) }}">{{ _('Code of Conduct') }}</a>.
             </p>
           </div><!-- Intro content -->
         </div><!-- Col end -->
