updated translation and regenerated static

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
             </p>
             <p>
               {{ _('PyCon SK is a diverse conference dedicated to providing an enjoyable experience to everyone. Help us do this by following our ') }}
-              <a href="{{ url_for('coc', lang_code=lang_code) }}">{{ _('Code of Conduct') }}</a>.
+              <a href="{{ url_for('coc', lang_code=lang_code) }}">{{ _('code of conduct') }}</a>.
             </p>
           </div><!-- Intro content -->
         </div><!-- Col end -->
