--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <div class="banner-item">
       <div class="container">
         <div class="banner-content text-center">
-          <h1 class="banner-title">{{ _('<span>Be a part of </span>PyCon SK 2019.') }}</h1>
+          <h1 class="banner-title">{{ _('<span>Be a part of </span>PyCon SK 2019') }}</h1>
           <h2 class="banner-desc">
             <span class="first">{{ _('22-24 March') }}</span><span>Bratislava</span><span>2019</span></h2>
         </div>
@@ -72,7 +72,7 @@
             </p>
             <p>
               {{ _('PyCon SK is a diverse conference dedicated to providing an enjoyable experience to everyone. Help us do this by following our ') }}
-              <a href="{{ url_for('coc', lang_code=lang_code) }}">code of conduct.</a>
+              <a href="{{ url_for('coc', lang_code=lang_code) }}">{{ _('code of conduct') }}</a>.
             </p>
           </div><!-- Intro content -->
         </div><!-- Col end -->
@@ -110,7 +110,7 @@
               <div class="tab-pane active animated fadeInRight" id="tab_a">
                 <img class="about-tab-img pull-left" src="{{ url_for('static', filename='images/icon-image/tab-img1.png') }}" alt=""/>
                 <h3 class="tab-content-title">{{ _('Respected industry leaders with future-tech talks.') }}</h3>
-                <p>{{ _('Appart from well recognized community members we also invite first time speakers to submit a talk.') }}</p>
+                <p>{{ _('Apart from well recognized community members we also invite first time speakers to submit a talk.') }}</p>
                 <p>{{ _('If you\'ve done something that you think other people might be interested in, or that you think they should know about, please do consider telling us about it.') }}</p>
                 <p class="text-center">
                   <a href="{{ url_for('cfp', lang_code=lang_code) }}" class="btn btn-primary">{{ _('Submit your talk') }}
